umap/static/umap/map.css
/* ... */
.edit-enable [type="button"]:before {
    content: ' ';
    width: 24px;
    height: 24px;
    display: inline-block;
    vertical-align: -20%;
    background-image: url('./img/16-white.svg');
    background-position: -48px -48px;
}
.edit-enable [type="button"] {
    width: initial;
    padding: 0 20px;
    background-color: #353c3e;
    color: #fff;
    background-image: none;
    border-radius: 20px;
    height: var(--control-size);
    line-height: var(--control-size);
    display: block;
}
.edit-enable [type="button"]:hover {
    background-color: #4d5759;
}
.umap-permanent-credits-container {
    max-width: 20rem;
    margin-inline-start: 5px!important;
    margin-bottom: 5px!important;
    padding: 0.5rem;
}
.credits-container h5 {
    margin-bottom: 5px;
}
.credits-container p {
    margin-top: 5px;
}
.attribution-toggle {
    display: none;
    width: 24px;
    height: 24px;
    vertical-align: middle;
    background-image: url('./img/16.svg');
    background-position: 0px 0px;
}
.leaflet-iconLayers-layer {
    width: 38px;
    height: 38px;
    box-shadow: none;
    border: 1px solid var(--color-lightGray);
    border-radius: 4px;
}
.leaflet-iconLayers-layerTitleContainer {
    display: none;
    inset-inline-start: 0;
    overflow: hidden;
    min-height: 1.5rem;
    height: 1.5rem;
}
.leaflet-iconLayers-layerTitle {
    text-align: center;
    display: inline-block;
}
.leaflet-iconLayers:hover .leaflet-iconLayers-layer {
    width: 80px;
    height: 80px;
}
.leaflet-iconLayers:hover .leaflet-iconLayers-layerTitleContainer {
    display: initial;
}
.leaflet-iconLayers-layerCell:hover .leaflet-iconLayers-layerTitleContainer {
    height: initial;
}
.leaflet-iconLayers-layerCell-plus {
    width: 80px;
    height: 80px;
    background-color: var(--background-color);
    vertical-align: middle;
    text-align: center;
    font-size: 3rem;
    display: none;
    line-height: 100%;
    border-radius: var(--border-radius);
    margin-bottom: 0;
    border: 1px solid var(--color-lightGray);
}
.leaflet-iconLayers-layerCell-plus:hover {
    background-color: var(--color-lightGray);
}
.leaflet-iconLayers:hover .leaflet-iconLayers-layerCell-plus {
    display: block;
}
.home-button {
    cursor: pointer;
    line-height: 0;
    border: 1px solid var(--color-darkBlue);
    border-radius: 50%;
    background-color: var(--background-color);
}
.home-button:hover {
    background-color: var(--color-lighterGray);
}
.umap-edit-enabled .home-button {
    display: none;
}



/* ***************** */
/*    Search panel   */
/* ***************** */
ul.photon-autocomplete {
    position: absolute;
    background-color: white;
    z-index: var(--zindex-autocomplete);
    display: none;
}
.photon-autocomplete li {
    min-height: 40px;
    line-height: 1em;
    padding-inline-start: 10px;
    overflow: hidden;
    white-space: nowrap;
    font-size: 1em;
    border-inline-start: 4px solid var(--color-lightGray);
}
.photon-autocomplete li strong {
    display: block;
    margin-top: 5px;
}
.photon-autocomplete button {
    margin: 0;
}
.photon-autocomplete button:hover {
    background-color: var(--color-darkCyan);
}
.photon-autocomplete button:hover i {
    /* TODO deal with this in icon.css  */
    background-image: url('./img/16-white.svg');
}
.photon-autocomplete li.on {
    border-inline-start: 4px solid var(--color-darkCyan);
    cursor: pointer;
    background-color: var(--color-lightCyan);
}
.photon-autocomplete li.photon-no-result {
    text-align: center;
    color: #666;
    font-size: 0.9em;
    line-height: 40px;
}
.photon-autocomplete .photon-feedback {
    display: block;
    text-align: end;
    font-size: 0.8em;
    padding: 3px;
    color: #999;
    border-top: 1px solid #eee;
}
.search-result-tools {
    float: inline-end;
    display: none;
}
.search-result-tools button {
    padding: 8px;
    background-color: var(--background-color);
}
.umap-edit-enabled .photon-autocomplete li.on .search-result-tools {
    display: flex;
}



/* ***************************** */
/*    Share and download panel   */
/* ***************************** */
.downloads li {
    height: 1.7em;
    padding: 0;
    text-align: start;
    vertical-align: bottom;
}
.vspace {
    height: 32px;
}

/* *********** */
/*    Draw     */
/* *********** */
.leaflet-drawing-icon,
.leaflet-editable-drawing {
    cursor: crosshair;
}
.umap-toolbar a,
.umap-toolbar a:hover {
    height: var(--control-size);
    width: var(--control-size);
    display: none;
    margin-top: 0;
    vertical-align: top;
    border-bottom: none;
    background-color: var(--color-darkGray);
    background-repeat: no-repeat;
    background-image: url('./img/24.svg');
    background-size: auto auto;
}
.umap-toolbar {
    margin-top: 0;
}
.update-map-extent,
.leaflet-container .umap-toolbar .update-map-extent {
    background-position: 0 -36px;
}
.umap-toolbar .update-map-tilelayers,
.update-map-tilelayers {
    background-position: -72px 0;
}
.manage-datalayers {
    background-position: -36px -72px;
}
.umap-toolbar .update-map-permissions,
.update-map-permissions {
    background-position: -36px -36px;
}
.umap-toolbar .upload-data,
.upload-data {
    background-position: -144px 0;
}
.umap-toolbar .update-map-settings,
.update-map-settings {
    background-position: -108px 0;
}
.umap-draw-marker,
.umap-toolbar .umap-draw-marker {
    background-position: -144px -36px;
}
.umap-draw-polyline,
.umap-toolbar .umap-draw-polyline {
    background-position: -108px -36px;
}
.umap-draw-polyline-multi,
.umap-toolbar .umap-draw-polyline-multi {
    background-position: -36px -106px;
}
.umap-draw-polygon,
.umap-toolbar .umap-draw-polygon {
    background-position: -72px -36px;
}
.umap-draw-polygon-multi,
.umap-toolbar .umap-draw-polygon-multi {
    background-position: 0 -108px;
}
.umap-edit-enabled .umap-toolbar a {
    display: block;
}
.leaflet-middle-icon,
.leaflet-vertex-icon {
    border-radius: 50%;
}
/* ... */

